style: limit cell height and prevent text overflow in admin panel

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -11,7 +11,6 @@ body {
   background-size: cover;
   background-repeat: no-repeat; /* Убирает повторение фона */
   background-position: center; /* Центрирует фон */
-  overflow: hidden; /* Убирает возможные прокрутки */
 }
 
 #adminPanel {
@@ -57,6 +56,14 @@ body {
 #adminPanel td:nth-child(3) {
   color: green; /* Цвет текста для ячеек третьего столбца */
 }
+
+#adminPanel td:nth-child(5),
+#adminPanel td:nth-child(1),
+#adminPanel td:nth-child(2) {
+  max-width: 222px;
+
+}
+
 #adminPanel td[contenteditable="true"]:focus {
   outline: auto; /* или outline: 1px solid blue; для конкретного стиля */
 }
@@ -72,7 +79,7 @@ body {
 }
 #controls {
   display: flex;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -310,7 +317,7 @@ button:active,
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
- padding: 20px;
+  padding: 20px;
   box-sizing: border-box; /*  чтобы padding не увеличивал общую ширину */
   width: 100%; /* Задаем ширину в процентах от родителя */
   max-width: 600px;
